# Intacct-Employee-Sync

./: .env  .gitignore  README.md  docker-compose.yaml
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py  employees.py  users.py
backend/app/core/: config.py  security.py
backend/app/database/: database.py  init_db.py
backend/app/db/: session.py
backend/app/models/: employee.py  users.py
backend/app/services/: sageintacct.py  user_services.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: LoginForm.tsx  NisumLogo.tsx  PrivateRoute.tsx  ProtectedRoute.tsx
frontend/src/components/Buttons/: FormButton.tsx  button.styles.ts
frontend/src/components/Checkbox/: FormCheckbox.tsx
frontend/src/components/Input/: FormInput.tsx
frontend/src/components/Logo/: NisumLogo.styles.ts  NisumLogo.tsx
frontend/src/components/form/: Form.styles.ts  FormButton.tsx  FormCheckbox.tsx  FormInput.tsx  LoginForm.tsx
frontend/src/components/layout/: SplitScreen.tsx
frontend/src/config/: axiosConfig.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: LoginPage.tsx
frontend/src/pages/Home/: HomePage.tsx
frontend/src/pages/Landing/: Landing.styles.ts  LandingPage.tsx
frontend/src/pages/Login/: Login.styles.ts  LoginPage.tsx
frontend/src/services/: authService.ts
frontend/src/styles/: theme.ts
frontend/src/styles/theme/: hooks.ts  index.ts  types.ts
(+5 files in other folders)
